Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51414

qdoc: Broken links for functions in a namespace

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.1
    • 5.6.0 RC
    • Build tools: qdoc
    • None

    Description

      If a module contains a documented function under a namespace, and that namespace originates from ( - is documented in) another module, the links to that function is broken in offline mode, which uses separate output sub-folders for each module docs.

      Qt 5.6.0RC: In Assistant, open Qt Core -> Qt Namespace -> Functions. The functions are documented on the same page, but the links go to Qt GUI instead.

      Attachments

        For Gerrit Dashboard: QTBUG-51414
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes