qdoc: Clear node's URL and index flag when reparenting it

The new parent may be from another module, and therefore have a
different output subfolder. Updating the output subfolder is
not enough; if the URL has been set, it still contains the old,
incorrect path.

Likewise, when moving a node into a non-index node parent, its
index node flag needs to be updated.

Change-Id: Ic5dcfbe78e37cea0d657f27f500fa3c4c2fc091d
Task-number: QTBUG-51414
Task-number: QTBUG-51358
Reviewed-by: Martin Smith <martin.smith@theqtcompany.com>